--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-1
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>zmzaxg.too-cs</title>
+		
+		<!--头部-->
+		<link rel="import" href="/tb/1.html" id="page0"/>
+    <!--内容-->
+    <link rel="import" href="/nr/1.html" id="page200"/>
+    <!--尾部-->
+		<link rel="import" href="/wb/1.html" id="page300"/>
+		
+		
+	</head>
+  <body>
+	
+<!--头部-->
+    <script type="text/javascript">
+      document.write(page0.import.body.innerHTML);
+    </script>
+<!--内容-->
+    <script type="text/javascript">
+      document.write(page200.import.body.innerHTML);
+    </script>
+<!--尾部-->
+    <script type="text/javascript">
+      document.write(page300.import.body.innerHTML);
+    </script>
+  </body>
+</html>
