--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <meta charset="UTF-8">
 <title>zmzaxg.too-cs</title>
 <!--头部-->
-<link rel="import" href="/tb/1.html" id="page0"/>
+<link rel="import" href="tb/1.html" id="page0"/>
 <!--内容-->
-<link rel="import" href="/nr/1.html" id="page200"/>
+<link rel="import" href="nr/1.html" id="page200"/>
 <!--尾部-->
-<link rel="import" href="/wb/1.html" id="page300"/>
+<link rel="import" href="wb/1.html" id="page300"/>
 </head>
   <body>
-	
 <!--头部-->
     <script type="text/javascript">
       document.write(page0.import.body.innerHTML);
