--- a/tb/1.html
+++ b/tb/1.html
@@ -2,14 +2,26 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>头部信息</title>
+		<title>头部1.html</title>
 		<style type="text/css">
 			#topTxt{
 				color:red;
 			}
 		</style>
 	</head>
+	
+	
+	
+	
+	
+	
+	
+	
 	<body>
-		<span id="topTxt">这里是头部信息</br></br></br></br></span>
+		
+		
+		
 	</body>
+	
+	
 </html>
