--- a/wb/1.html
+++ b/wb/1.html
@@ -2,20 +2,30 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>尾部 </title>
+		<title>尾部</title>
 		<style type="text/css">
 			#bottomTxt{
 				color:blue;
 			}
 		</style>
-		
 	</head>
+	
+	
+	
+	
+	
+	
 	<body>
-		<span id="bottomTxt"></br></br></br></br>这里是尾部信息</span>
+		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a>
 	</body>
+	
+	
+	
+	
+	
+	
 	<script>
 		function demo(){
-		
 			var  bottomTxtObj = document.getElementById("bottomTxt");
 			bottomTxtObj.innerHTML=bottomTxtObj.innerHTML+",尾部追加信息！";
 		}
