--- a/wb/1.html
+++ b/wb/1.html
@@ -27,7 +27,7 @@
 	<script>
 		function demo(){
 			var  bottomTxtObj = document.getElementById("bottomTxt");
-			bottomTxtObj.innerHTML=bottomTxtObj.innerHTML+",尾部追加信息！";
+			bottomTxtObj.innerHTML=bottomTxtObj.innerHTML+" © 2021";
 		}
 		demo();
 	</script>
