--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
+
 <title>zmzaxg.too-cs</title>
+
+
+
 <!--头部-->
 <link rel="import" href="tb/1.html" id="page0"/>
 <!--内容-->
