--- a/wb/1.html
+++ b/wb/1.html
@@ -17,7 +17,7 @@
 	
 	<body>
 		<br>
-		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a>
+		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a> © 2021
 		
 	</body>
 	
