--- a/wb/1.html
+++ b/wb/1.html
@@ -2,8 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
 		
-		<title>尾部</title>
+		<title>尾部1.html</title>
+		
 		<style type="text/css">
 			#bottomTxt{
 				color:blue;
