--- a/wb/1.html
+++ b/wb/1.html
@@ -24,7 +24,7 @@
 	
 	<body>
 		<br>© 2021 
-		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a> © 2021
+		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a>
 		
 	</body>
 	
