--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
   <body>
 <!--头部-->
-    <script type="text/javascript" src="tb/1.html?randomId=<%=console.log(Date.now().toString(36))%>">
+    <script type="text/javascript">
       document.write(page0.import.body.innerHTML);
     </script>
 <!--内容-->
