--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 
 
+<!--导入外部div类ajax异步提交请求js文件动态加载文件数据-->
+<script src="js/div-ajax.js"></script>
+
+
+
 <!--头部-->
 <link rel="import" href="tb/1.html" id="page0"/>
 <!--内容-->
