--- a/tb/1.html
+++ b/tb/1.html
@@ -1,3 +1,32 @@
-	<div id="tb1h">
-		yyyyghvvvg
-	</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
+		
+		<title>内容1.html</title>
+		
+		<style type="text/css">
+			#topTxt{
+				color:red;
+			}
+		</style>
+	</head>
+	
+	
+	
+	
+	
+	
+	
+	
+	<body>
+		头部
+	</body>
+	
+	
+</html>
