--- a/wb/1.html
+++ b/wb/1.html
@@ -30,7 +30,7 @@
 	
 	
 	<body>
-		<br>© 2021 okok
+		<br>© 2021 okok nnn
 		<a class="pk-hover-underline" href="http://zmzaxg.top/" target="_blank" style="font-size:12px;color:#777;">Powered by zmzaxg 1.0</a>
 		<!---->
 	</body>
