--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 
 <!--加载使用js将获取到的文件路径读取并使用include展现-->
-<script src="js/include-hqwjnr.js"><script>
-<!--<include src="文件路径"></include>-->
+<script src="js/hq.js"></script>
     
 </head>
   <body>
