--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <!--加载使用js将获取到的文件路径读取并使用include展现-->
-<script src="js/hq.js"></script>
+<script src="js/hq.js?'+Math.random();+'"></script>
     
 </head>
   <body>
