--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@
     
 </head>
   <body>
-<!--头部-->
-    <include src="tb/1.html"></include>
-<!--内容-->
-    <include src="nr/1.html"></include>
-<!--尾部-->
-    <include src="wb/1.html"></include>
-    
+    <include src="wb/1.html"></include><include src="wb/1.html"></include><include src="wb/1.html"></include>
   </body>
 
 
